<resources>
    <string name="app_name">Holti Health</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_history">History</string>
    <string name="title_article">Article</string>
    <string name="title_profile">Profile</string>
    <string name="Scan">Scan</string>
    <string name="scan">Scan</string>
    <string name="signup">Daftar</string>
    <string name="masuk">Masuk</string>
    <string name="title_welcome_page">Selamat datang di Holti Health!</string>
    <string name="message_welcome_page">Temukan solusi terbaik untuk melindungi tanaman cabai Anda dari penyakit. Dengan Holti Health, panen sehat bukan lagi sekadar harapan!</string>
    <string name="title_welcome_page1">Selamat Datang, Petani Cerdas!</string>
    <string name="message_welcome_page1">Holti Health hadir untuk membantu Anda mengenali dan mengatasi penyakit pada tanaman cabai. Tingkatkan hasil panen Anda dengan teknologi pintar!</string>
    <string name="title_welcome_page2">Mari Mulai Bersama Holti Health!</string>
    <string name="message_welcome_page2">Tekan tombol di bawah untuk memulai analisis tanaman cabai Anda. Bersama Holti Health, langkah kecil Anda hari ini membawa panen besar esok hari!</string>
    <string name="choose_again">Choose Again</string>
    <string name="photos">Photos</string>
    <string name="retake">Retake</string>
    <string name="image_scan">image scan</string>
    <string name="text_result">text_result</string>
    <string name="disease_name">disease name</string>
    <string name="scan_date">scan date</string>

    <string name="title">Title</string>
    <string name="description">description</string>
    <string name="register">Register</string>
    <string name="recent_diagnoze">Recent Diagnoze</string>
    <string name="belum_ada_history">Belum Ada History</string>

    <string name="email">Email</string>
    <string name="silahkan_login_terlebih_dahulu_ya">Silahkan Login Terlebih dahulu ya</string>
    <string name="sudah_siap_untuk_hasil_panen_berlimpah">Sudah Siap Untuk Hasil Panen Berlimpah?</string>
    <string name="password">Password</string>
    <string name="title_register">Lengkapi Data Dirimu Dibawah Ini ya</string>
    <string name="nama">Nama</string>
    <string name="home">Home</string>
    <string name="hello">Apa Kabar!</string>
    <string name="username">username</string>
    <string name="kenali_penyakit_cabai_dengan_ai">Kenali penyakit cabai dengan AI</string>
    <string name="mulai_kenali">Mari mulai kenali penyakit yang menyerang cabai anda.</string>
    <string name="scan_now">Scan Sekarang</string>
    <string name="login">Login</string>
    <string name="invalid_email_error">Format email tidak sesuai</string>
    <string name="history">History</string>
    <string name="article">Article</string>


</resources>